secondfile/objects/LATA_BAN_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Ban__c</fullName>
        <label>Ban</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lata__c</fullName>
        <label>Lata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LATA-BAN-Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ban__c</columns>
        <columns>Lata__c</columns>
        <columns>Region__c</columns>
        <columns>State__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LATABAN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LATA-BAN-Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>